--- a/INCREMENTAL DATA INGESTION.ipynb
+++ b/INCREMENTAL DATA INGESTION.ipynb
@@ -7,6 +7,48 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
       "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "da2e0a00-c723-4af9-8d76-61ea743a4af4",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "dbutils.widgets.text('source', '')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "340272a9-4173-4558-8282-cb613232f730",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "source_value = dbutils.widgets.get('source')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
       "implicitDf": true,
       "rowLimit": 10000
      },
@@ -20,10 +62,10 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "CREATE SCHEMA workspace.raw;\n",
-    "CREATE SCHEMA workspace.bronze;\n",
-    "CREATE SCHEMA workspace.silver;\n",
-    "CREATE SCHEMA workspace.gold;"
+    "-- CREATE SCHEMA workspace.raw;\n",
+    "-- CREATE SCHEMA workspace.bronze;\n",
+    "-- CREATE SCHEMA workspace.silver;\n",
+    "-- CREATE SCHEMA workspace.gold;"
    ]
   },
   {
@@ -46,9 +88,9 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "CREATE VOLUME workspace.bronze.volume;\n",
-    "CREATE VOLUME workspace.silver.volume;\n",
-    "CREATE VOLUME workspace.gold.volume;"
+    "-- CREATE VOLUME workspace.bronze.volume;\n",
+    "-- CREATE VOLUME workspace.silver.volume;\n",
+    "-- CREATE VOLUME workspace.gold.volume;"
    ]
   },
   {
@@ -69,10 +111,10 @@
    },
    "outputs": [],
    "source": [
-    "dbutils.fs.mkdirs(\"/Volumes/workspace/raw/raw_data/customers\")\n",
-    "dbutils.fs.mkdirs(\"/Volumes/workspace/raw/raw_data/airports\")\n",
-    "dbutils.fs.mkdirs(\"/Volumes/workspace/raw/raw_data/bookings\")\n",
-    "dbutils.fs.mkdirs(\"/Volumes/workspace/raw/raw_data/flights\")"
+    "# dbutils.fs.mkdirs(\"/Volumes/workspace/raw/raw_data/customers\")\n",
+    "# dbutils.fs.mkdirs(\"/Volumes/workspace/raw/raw_data/airports\")\n",
+    "# dbutils.fs.mkdirs(\"/Volumes/workspace/raw/raw_data/bookings\")\n",
+    "# dbutils.fs.mkdirs(\"/Volumes/workspace/raw/raw_data/flights\")"
    ]
   },
   {
@@ -96,42 +138,11 @@
     "df = spark.readStream.format('cloudFiles').options(\n",
     "    **{\n",
     "        'cloudFiles.format':'csv',\n",
-    "        'cloudFiles.schemaLocation':'/Volumes/workspace/bronze/volume/bookings/checkpoint',\n",
+    "        'cloudFiles.schemaLocation':f'/Volumes/workspace/bronze/volume/{source_value}/checkpoint',\n",
     "        'cloudFiles.schemaEvolutionMode':'rescue'\n",
     "    }\n",
-    ").load('/Volumes/workspace/raw/raw_data/bookings/')\n",
+    ").load(f'/Volumes/workspace/raw/raw_data/{source_value}/')\n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "implicitDf": true,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "ee438d0a-6dd8-4b95-8878-cffc2b31d1bd",
-     "showTitle": false,
-     "tableResultSettingsMap": {
-      "0": {
-       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1752238365834}",
-       "filterBlob": null,
-       "queryPlanFiltersBlob": null,
-       "tableResultIndex": 0
-      }
-     },
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%sql\n",
-    "\n",
-    "SHOW VOLUMES"
    ]
   },
   {
@@ -155,8 +166,8 @@
     "df.writeStream.format('delta').options(\n",
     "    **{\n",
     "        'outputMode':'append',\n",
-    "        'checkpointLocation': '/Volumes/workspace/bronze/volume/bookings/checkpoint',\n",
-    "        'path': '/Volumes/workspace/bronze/volume/bookings/data'\n",
+    "        'checkpointLocation': f'/Volumes/workspace/bronze/volume/{source_value}/checkpoint',\n",
+    "        'path': f'/Volumes/workspace/bronze/volume/{source_value}/data'\n",
     "    }\n",
     ").trigger(once=True).start()"
    ]
@@ -172,7 +183,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "942bfba1-92dc-4f08-9660-11e2f3f5caee",
+     "nuid": "38fd7b08-371c-4dbd-a6f4-00b6a3871b50",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -181,25 +192,8 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "SELECT * FROM delta.`/Volumes/workspace/bronze/volume/bookings/data/`"
+    "SELECT * FROM delta.`/Volumes/workspace/bronze/volume/airports/data`"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "bf9a3d01-a47b-4b7d-8d51-e0fb54a72222",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": []
   }
  ],
  "metadata": {
@@ -214,7 +208,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 4757255344556400,
+     "commandId": 7088763222497683,
      "dataframes": [
       "_sqldf"
      ]
@@ -222,7 +216,34 @@
     "pythonIndentUnit": 4
    },
    "notebookName": "INCREMENTAL DATA INGESTION",
-   "widgets": {}
+   "widgets": {
+    "source": {
+     "currentValue": "bookings",
+     "nuid": "c1204756-73f2-4e00-84e0-d1cf64bfab08",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "",
+      "label": null,
+      "name": "source",
+      "options": {
+       "widgetDisplayType": "Text",
+       "validationRegex": null
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "text",
+      "defaultValue": "",
+      "label": null,
+      "name": "source",
+      "options": {
+       "widgetType": "text",
+       "autoCreated": null,
+       "validationRegex": null
+      }
+     }
+    }
+   }
   },
   "language_info": {
    "name": "python"
